Fix codemirror misaligned width on vertical screen layouts

--- a/src/electric_tutorial/tutorial.css
+++ b/src/electric_tutorial/tutorial.css
@@ -1,4 +1,6 @@
-.user-examples-code { max-width: 80ch; }
+@media (min-width: 981px){
+    .user-examples-code { max-width: 80ch; }
+}
 
 /* Forms, Crud, TodoMVC(!important) */
 .user-examples-target [aria-busy="true"] { background-color: yellow !important; }
